--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,6 +103,12 @@ jobs:
             --platform ${{ matrix.docker-platform }} \
             python:3.12-bookworm \
               bash -c "
+                if [[ "$(uname -m)" == "s390x" ]]; then
+                  # This hack gets the PyPy provider tests working on this image. The old PyPy s390x
+                  # distributions dynmaically link libffi at an older version than I've been able to
+                  # find a multi-platform image with s390x support for.
+                  ln -s /usr/lib/s390x-linux-gnu/libffi.so.8 /usr/lib/s390x-linux-gnu/libffi.so.6
+                fi
                 pip install nox &&
                 addgroup --gid $(id -g) build &&
                 adduser --disabled-password --gecos '' --gid $(id -g) --uid $(id -u) build &&
