--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,13 +103,13 @@ jobs:
             --platform ${{ matrix.docker-platform }} \
             python:3.12-bookworm \
               bash -c "
-                if [[ "$(uname -m)" == "s390x" ]]; then
+                if [[ \"$(uname -m)\" == 's390x' ]]; then
                   # This hack gets the PyPy provider tests working on this image. The old PyPy s390x
                   # distributions dynmaically link libffi at an older version than I've been able to
                   # find a multi-platform image with s390x support for.
                   ln -s /usr/lib/s390x-linux-gnu/libffi.so.8 /usr/lib/s390x-linux-gnu/libffi.so.6
-                elif [[ "$(uname -m)" == "ppc64le" ]]; then
-                  echo "Skipping tests on ppc64le."
+                elif [[ \"$(uname -m)\" == 'ppc64le']; then
+                  echo 'Skipping tests on ppc64le.'
                   exit 0
                 fi
                 pip install nox &&
