--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,7 +103,7 @@ jobs:
             # distributions dynmaically link libffi at an older version than I've been able to
             # find a multi-platform image with s390x support for.
             ln -s /usr/lib/s390x-linux-gnu/libffi.so.8 /usr/lib/s390x-linux-gnu/libffi.so.6
-          elif [[ "$(uname -m)" == 'ppc64le']; then
+          elif [[ "$(uname -m)" == 'ppc64le' ]]; then
             echo 'Skipping tests on ppc64le.'
             exit 0
           fi
