--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,9 @@ jobs:
       - name: Setup x86_64 Python for Prism
         if: matrix.os == 'windows-arm64'
         run: |
+          # N.B.: We use an x86-64 Python for Windows ARM64 because this is what we ship with via
+          # PBS, and we need to be able to resolve x86-64 compatible requirements (which include
+          # native deps like psutil) for our shiv.
           UV_PYTHON_VERSION=cpython-3.12.8-windows-x86_64-none
           uv python install ${UV_PYTHON_VERSION}
           echo UV_PYTHON_ARGS="--python ${UV_PYTHON_VERSION}" >> ${GITHUB_ENV}
