Fixup order of operations.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,9 +70,12 @@ jobs:
           curl -fssL -O https://github.com/astral-sh/uv/releases/latest/download/uv-x86_64-pc-windows-msvc.zip
           curl -fssL -O https://github.com/astral-sh/uv/releases/latest/download/uv-x86_64-pc-windows-msvc.zip.sha256
           shasum -c uv-x86_64-pc-windows-msvc.zip.sha256
+          
           unzip -d .bin uv-x86_64-pc-windows-msvc.zip
-          echo PATH="${PWD}/.bin:${PATH}" >> ${GITHUB_ENV}
+          export PATH="${PWD}/.bin:${PATH}
           uv -V
+          
+          echo PATH="${PATH}" >> ${GITHUB_ENV}
       - name: Setup x86_64 Python for Prism
         if: matrix.os == 'windows-arm64'
         run: |
