--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,14 +86,21 @@ jobs:
     steps:
       - name: Install the latest version of uv
         if: matrix.docker-platform == '' && matrix.os != 'windows-arm64'
-        uses: astral-sh/setup-uv@v4
+        uses: astral-sh/setup-uv@v5
       - name: Install the latest version of uv
         if: matrix.os == 'windows-arm64'
-        shell: cmd
         run: |
-          "C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\Tools\VsDevCmd.bat"
-          cargo install --git https://github.com/astral-sh/uv uv
+          rm -rf .bin && mkdir .bin && cd .bin
+
+          curl -fL -O https://github.com/astral-sh/uv/releases/latest/download/uv-x86_64-pc-windows-msvc.zip
+          curl -fL -O https://github.com/astral-sh/uv/releases/latest/download/uv-x86_64-pc-windows-msvc.zip.sha256
+          shasum -c uv-x86_64-pc-windows-msvc.zip.sha256
+
+          unzip uv-x86_64-pc-windows-msvc.zip
+          export PATH="$(pwd):${PATH}"
           uv -V
+
+          echo PATH="${PATH}" >> ${GITHUB_ENV}
       - name: Setup x86_64 Python for Prism
         if: matrix.os == 'windows-arm64'
         run: |
