--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,7 +96,7 @@ jobs:
       - name: Install the latest version of uv
         if: matrix.os == 'windows-arm64'
         run: |
-          CI_BIN_DIR=$(mktemp -d)
+          CI_BIN_DIR="$(mktemp -d)"
           echo CI_BIN_DIR="${CI_BIN_DIR}" >> ${GITHUB_ENV}
           (
             cd "${CI_BIN_DIR}"
@@ -126,7 +126,8 @@ jobs:
           ref: ${{ needs.determine-tag.outputs.release-tag }}
       - name: Package science ${{ needs.determine-tag.outputs.release-tag }} binary
         if: matrix.docker-platform == ''
-        run: "${UV}" run ${UV_PYTHON_ARGS} dev-cmd package
+        run: |
+          "${UV}" run ${UV_PYTHON_ARGS} dev-cmd package
       - name: Package science ${{ needs.determine-tag.outputs.release-tag }} binary
         if: matrix.docker-platform != ''
         run: |
